= CHANGES

== 0.9.7 (unreleased)

* Fixed a bug that duplicates admin menus during app reloading.
* Added feed_tag helper
* Removed Mailer Initializer from app.rb.tt and added it to the mailer generator.
* Removed duplicate app folder in project skeleton.
* Couchrest generator now include in Gemfile json_pure
* Fixed project name when using some like www.my-domain.com
* Fixed a small typo error in app template
* Fixes issue with formatted routes for an index
* Fixed an issue with Riot and RR in generator
* Added stylesheet generator. Decouples from sass from haml generation. Includes sass and less ( via rack-less)

== 0.9.6

* Fixed an issue in controller generator when using --app=app_name
* Added mm:transate task for easily translate models
* Updated favicon_tag to search inside images folder 
* Fixes an issue with rendering with layout false now you can use: render 'path/to/template', :layout => false
* Small helpers refactoring
* Fixed mailer initializer issue. Cleaned up options in delivery.rb
* Fixes tests in padrino helper.

== 0.9.5

* Added the possibility for dsl lovers to create a single file in app called helpers.rb/controllers.rb/mailers.rb
* Changed generated scaffold now table rows didn't contains links
* Fixed a bug in reloader, now we prevent schema.rb reloading
* Fixed check_box helper when :checked => false we remove them
* Added auto template lookup with locale and format i.e: show.ru.js.erb or show.js.erb or show.en.erb
* Css refactoring and fixed an unused css in Padrino Admin generator
* Fixed ar:structure:dump and others tasks that don't use symbols
* Fixed compatibility with ERB and Sinatra 1.0
* Fixed an issues with index and ar:auto:upgrade
* Now we use Sinatra 0.9.6 since previous versions on ruby >= 1.8.7-p248 raise a segfault bug
* Refactored executables
* Added strip_tags helper
* Fixed model_attribute_translate helper
* Added favicon
* Prevent bundler gem clashing
* Fixed minor SASS support issue for haml generated projects

== 0.9.4